<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E8E8"
    tools:context=".LoginAct">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_fashionista"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <EditText
        android:id="@+id/username_plaintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/password_plaintext"
        app:layout_constraintEnd_toEndOf="@+id/login_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_title"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="160dp" />

    <EditText
        android:id="@+id/password_plaintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_link_register"
        app:layout_constraintEnd_toEndOf="@+id/username_plaintext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/username_plaintext"
        app:layout_constraintTop_toBottomOf="@+id/username_plaintext" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="157dp"
        android:layout_height="201dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/login_title"
        app:layout_constraintEnd_toEndOf="@+id/login_title"
        app:layout_constraintStart_toStartOf="@+id/login_title"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:srcCompat="@drawable/fashionista_crop_" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="54dp"
        android:backgroundTint="#020101"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_link_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txt_link_register"
        app:layout_constraintTop_toBottomOf="@+id/txt_link_register" />

    <TextView
        android:id="@+id/txt_link_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_register_here"
        android:textColor="@color/primaryBlue"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/password_plaintext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/password_plaintext"
        app:layout_constraintTop_toBottomOf="@+id/password_plaintext" />

</androidx.constraintlayout.widget.ConstraintLayout>